WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
157475
REGRESSION (198056): Unable to use edit buttons on WordPress
https://bugs.webkit.org/show_bug.cgi?id=157475
Summary
REGRESSION (198056): Unable to use edit buttons on WordPress
Ryosuke Niwa
Reported
2016-05-09 08:50:39 PDT
We need to rename `Event.prototype.deepPath` to `Event.prototype.composedPath`
Attachments
Renames deepPath to composedPath
(9.23 KB, patch)
2016-05-09 10:08 PDT
,
Ryosuke Niwa
koivisto
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2016-05-09 10:08:43 PDT
Created
attachment 278407
[details]
Renames deepPath to composedPath
Antti Koivisto
Comment 2
2016-05-09 10:23:06 PDT
Comment on
attachment 278407
[details]
Renames deepPath to composedPath r=me This tramples over the existing definition of "composed tree" which we use widely internally. Hope this is the last time the terminology changes.
Ryosuke Niwa
Comment 3
2016-05-09 10:46:15 PDT
Committed
r200580
: <
http://trac.webkit.org/changeset/200580
>
Ryan Haddad
Comment 4
2016-05-09 12:48:55 PDT
This change introduced LayoutTest failures: fast/xmlhttprequest/xmlhttprequest-get.xhtml [ Failure ] http/tests/workers/worker-importScriptsOnError.html [ Failure ] inspector/model/remote-object-get-properties.html [ Failure ] <
https://build.webkit.org/builders/Apple%20El%20Capitan%20Debug%20WK2%20%28Tests%29/builds/5041
>
Ryan Haddad
Comment 5
2016-05-09 13:10:38 PDT
(In reply to
comment #4
)
> This change introduced LayoutTest failures: > > fast/xmlhttprequest/xmlhttprequest-get.xhtml [ Failure ] > http/tests/workers/worker-importScriptsOnError.html [ Failure ] > inspector/model/remote-object-get-properties.html [ Failure ] > > <
https://build.webkit.org/builders/
> Apple%20El%20Capitan%20Debug%20WK2%20%28Tests%29/builds/5041>
Rebaselined tests in <
https://trac.webkit.org/r200585
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug