REGRESSION (198056): Unable to use edit buttons on WordPress https://bugs.webkit.org/show_bug.cgi?id=157475

Reviewed by Antti Koivisto.

Source/WebCore:

Renamed Event.prototype.deepPath() to composedPath() per discussions on
https://github.com/whatwg/dom/issues/242 as the old name was not Web compatible.

Test: fast/shadow-dom/Extensions-to-Event-Interface.html

* dom/Event.cpp:
(WebCore::Event::composedPath): Renamed from deepPath.
* dom/Event.h:
* dom/Event.idl:

LayoutTests:

Updated the tests.

* fast/shadow-dom/Extensions-to-Event-Interface-expected.txt:
* fast/shadow-dom/Extensions-to-Event-Interface.html:
* fast/shadow-dom/resources/event-path-test-helpers.js:
(dispatchEventWithLog):


Canonical link: https://commits.webkit.org/175611@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@200580 268f45cc-cd09-0410-ab3c-d52691b4dbfc